welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: '=' expected but ';' found.
var nbPas==0;
            ^